Modified appsettings.json file.

--- a/AppStart/ActionFilters/ActionFilters/appsettings.json
+++ b/AppStart/ActionFilters/ActionFilters/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "sqlConString": "Server=.;Database=CodeMaze;Trusted_Connection=True;"
+  },
   "AllowedHosts": "*"
 }
